--- a/src/components/containerSlider/ContainerSlider.css
+++ b/src/components/containerSlider/ContainerSlider.css
@@ -76,8 +76,10 @@
     }
 
     .context {
-        width: 80%;
-        margin-left: 20px;
+        width: 95%;
+        margin-left: 10px;
+        margin-bottom: 100px;
+        
        
     }
     .context p, h2 {
