--- a/src/components/containerSlider/ContainerSlider.css
+++ b/src/components/containerSlider/ContainerSlider.css
@@ -65,6 +65,9 @@
 
 
 @media screen and (max-width: 580px) {
+ .swiper .navigation .prevEl {
+      display: none;
+    }
 
     .containerSlider{
         width: 100%;
