--- a/src/components/contact_home/Contact.css
+++ b/src/components/contact_home/Contact.css
@@ -2,7 +2,7 @@
    
     width: 100%;
     background: linear-gradient(to bottom, #012C6D ,#0251B8 ,#0267EB);
-    color: yellow;
+    color: white;
 }
 
 
@@ -28,7 +28,7 @@
     
 }
 
-form {
+.form form {
 
     display: flex;
     flex-direction: column;
@@ -37,14 +37,18 @@ form {
     
 }
 
-form h3 {
+.form form label {
+    margin-left: 20px;
+}
+
+.form form h3 {
     margin-bottom: 20px;
     font-weight: bold;
     font-size: 25px;
     
 }
 
-form input {
+.form form input {
     margin: 15px;
     width: 90%;
     height: 36px;
@@ -56,7 +60,7 @@ form input {
 
 }
 
-form input:focus{
+.form form input:focus{
     border: 2px solid yellow;
 }
 
