--- a/src/components/containerSlider/ContainerSlider.css
+++ b/src/components/containerSlider/ContainerSlider.css
@@ -2,14 +2,17 @@
 
 
 .containerSlider {
-    padding: 30px 3%;
+   
     margin: 0 auto;
-    max-width:  1200px;
+    max-width:  100%;
     height: 600px;
     position: relative;
     z-index: 0;
+    
    
 }
+
+
 
 
 .swiper-pagination-bullet{
@@ -25,7 +28,6 @@
    
     width: 100%;
     height: 600px;
-    border-radius: 20px ;
 
     
 }
@@ -85,12 +87,24 @@
         
        
     }
-    .context p, h2 {
+    .context p {
         margin-left: 28px;
+        font-size: 16px;
+    }
+    .context h2{
+        margin-left: 28px;
+        font-size: 22px;
+
     }
     .swiper-pagination-bullet{
         display: none;
     
+    }
+    .swiper-button-next{
+        display: none;
+    }
+    .swiper-button-prev{
+        display: none;
     }
     
 
