--- a/src/components/seviços_home/Serviços.css
+++ b/src/components/seviços_home/Serviços.css
@@ -1,19 +1,32 @@
 
 
 .serviços {
-    padding: 30px 0;
+
     width: 100%;
-    height: auto;
+    min-height: 450px;
     background: linear-gradient(to bottom, #012C6D ,#0251B8 ,#0267EB);
     margin-top: 70px;
-    color: yellow;
+    color: white;
     
+}
+
+.serviços h2{
+    margin-top: 100px;
+    padding: 30px 0;
+    text-align: center;
+    font-weight: bold;
+    text-transform: uppercase;
+}
+
+.serviços .sub_p{
+    text-align: left;
+    padding: 0 20px;
 }
 
 .center-service{
     max-width: 1280px;
     margin:0 auto;
-    padding:0 2%;
+    padding:20px 2%;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
@@ -36,22 +49,20 @@
   
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
-    width: 20%;
-    height: auto;
-    margin-top: 20px;
+    width: 30%;
+    margin: 30px;
     border-radius: 10px ;
+    
  
 }
-.service-single h2{
-    text-align: center;
-    margin: 15px;
-  
-    
+.service-single h3{
+    margin-top: 20px;
+    text-align: center;   
 }
 
 .service-single .icon {
+    margin-top: 20px;
     width: 90px;
    
 
@@ -61,8 +72,20 @@
     width: 100%;
     text-align: left;
     padding: 0 10px;
-    margin-top: 5px;
+    
    
+}
+
+.service-single span a{
+    color: yellow;
+    font-weight: lighter;
+
+}
+.service-single span:hover{
+
+    border-bottom: 1px solid yellow;
+
+
 }
 
 @media screen  and (max-width: 580px){
