--- a/src/components/seviços_home/Serviços.css
+++ b/src/components/seviços_home/Serviços.css
@@ -4,8 +4,7 @@
 
     width: 100%;
     min-height: 450px;
-    background: linear-gradient(to bottom, #012C6D ,#0251B8 ,#0267EB);
-    margin-top: 70px;
+    background: linear-gradient(to top, #012C6D ,#0251B8 ,#196cd9);
     color: white;
     
 }
