--- a/src/components/seviços_home/Serviços.css
+++ b/src/components/seviços_home/Serviços.css
@@ -77,7 +77,7 @@
 
 .service-single span a{
     color: yellow;
-    font-weight: lighter;
+    font-weight: bold;
 
 }
 .service-single span:hover{
