--- a/src/pages/productsDetails/ProductsDetails.module.css
+++ b/src/pages/productsDetails/ProductsDetails.module.css
@@ -289,6 +289,12 @@ section .title_products{
         margin: 0;
     }
 
+    .product_description p {
+
+        width: 100%;
+        margin: 30px auto;
+    }
+
     .center_container{
         flex-direction: column;
         justify-content: center;
