--- a/src/components/containerSlider/ContainerSlider.css
+++ b/src/components/containerSlider/ContainerSlider.css
@@ -5,13 +5,11 @@
    
     margin: 0 auto;
     max-width:  100%;
-    height: 540px;
+    height: 500px;
     position: relative;
     z-index: 0;
-    
-   
+    margin-bottom: 200px;
 }
-
 
 
 
