--- a/src/components/section_tool/SectionTool.module.css
+++ b/src/components/section_tool/SectionTool.module.css
@@ -63,4 +63,18 @@
   .containerDescription p {
     line-height: 25px;
   }
+
+  @media screen  and (max-width: 700px){
+
+    .center {
+      flex-direction: column !important;
+      align-items: center;
+      margin-bottom: 100px; 
+    }
+
+    .containerDescription h2 {
+      margin-top: 50px;
+    }
+
+  }
   
