--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -11,8 +11,7 @@ footer{
     margin: 0 auto;
     display: flex ;
     padding: 20px;
-    justify-content: space-around;
-    
+    justify-content: space-around;   
 }
 
 .logo {
@@ -73,6 +72,7 @@ footer ul li {
     align-items: center;
     justify-content: center;
     min-height: 50px;
+    padding: 0 2%;
 }
 
 .sub_footer span{
