--- a/src/components/section_tool/SectionTool.module.css
+++ b/src/components/section_tool/SectionTool.module.css
@@ -74,7 +74,15 @@
 
     .containerDescription h2 {
       margin-top: 50px;
+      text-align: center;
     }
+
+    .containerDescription {
+      width: 100%;
+      padding: 0 2%;
+    }
+
+   
 
   }
   
